Accessibility course lessons quizes
My work on fixes for accessibility course

--- a/lesson2-focus/05-radio-group/index.html
+++ b/lesson2-focus/05-radio-group/index.html
@@ -14,19 +14,19 @@
       <h3>Drink Options</h3>
 
       <ul id="group1" class="radiogroup">
-        <li tabindex="0" class="radio" checked>
+        <li tabindex="0" name ="rad" class="radio" >
           Water
         </li>
-        <li tabindex="-1" class="radio">
+        <li tabindex="-1" name ="rad" class="radio">
           Tea
         </li>
-        <li tabindex="-1" class="radio">
+        <li tabindex="-1" name ="rad" class="radio">
           Coffee
         </li>
-        <li tabindex="-1" class="radio">
+        <li tabindex="-1" name ="rad" class="radio">
           Cola
         </li>
-        <li tabindex="-1" class="radio">
+        <li tabindex="-1"  name ="rad" class="radio">
           Ginger Ale
         </li>
       </ul>
